--- a/css/styles.css
+++ b/css/styles.css
@@ -2,14 +2,14 @@
   --second-footer-color: #f4f4fd;
   --second-link-color: #404bbf;
   --second-color-buttom: #ffffff;
-  --body-background-color: #FFFFFF;
+  --body-background-color: #ffffff;
 }
 
 body {
   font-family: "Roboto", sans-serif;
   font-weight: 500;
-  color:#434455;
-  background-color: var(--body-background-color) ;
+  color: #434455;
+  background-color: var(--body-background-color);
 }
 .list {
   list-style: none;
