--- a/css/styles.css
+++ b/css/styles.css
@@ -27,9 +27,20 @@ body {
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: var(--logo-color);
-  
+  color: var(--logo-color);  
 }
+
+  .logo-studio {
+font-family: 'Raleway';
+font-style: normal;
+font-weight: 800;
+font-size: 18px;
+line-height: 1.17;
+color: #2E2F42;
+text-transform: uppercase;
+}
+
+
 .navigation {
   font-size: 16px;
   line-height: 1.5;
