--- a/css/styles.css
+++ b/css/styles.css
@@ -73,6 +73,12 @@ text-transform: uppercase;
   color: #404bbf;
 }
 
+
+/*----------------- HERO SECTION INDEX-------------- */
+.hero-main-index{
+  
+}
+
 /**--------------------HERO BTN------------------**/
 
 .hero-button {
