--- a/css/styles.css
+++ b/css/styles.css
@@ -27,22 +27,21 @@ body {
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: var(--logo-color);  
+  color: var(--logo-color);
 }
 
-  .logo-studio {
-font-family: 'Raleway', sans-serif;
-font-style: normal;
-font-weight: 800;
-font-size: 18px;
-line-height: 1.17;
-color: #2E2F42;
-text-transform: uppercase;
+.logo-studio {
+  font-family: "Raleway", sans-serif;
+  font-style: normal;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 1.17;
+  color: #2e2f42;
+  text-transform: uppercase;
 }
-
 
 .navigation {
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
@@ -74,10 +73,8 @@ text-transform: uppercase;
   color: #404bbf;
 }
 
-
 /*----------------- HERO SECTION INDEX-------------- */
-.hero-main-index{
-
+.hero-main-index {
 }
 
 /**--------------------HERO BTN------------------**/
