--- a/css/styles.css
+++ b/css/styles.css
@@ -59,7 +59,7 @@ body {
   color: #434455;
 }
 .header-contact-mail:is(:hover, :focus) {
-  color: #404bbf;
+  color: var(--second-link-color);
 }
 
 .header-contact-phone {
@@ -70,7 +70,7 @@ body {
   color: #434455;
 }
 .header-contact-phone:is(:hover, :focus) {
-  color: #404bbf;
+  color: var(--second-link-color);
 }
 .adress {
   font-style:normal;
