--- a/css/styles.css
+++ b/css/styles.css
@@ -47,7 +47,7 @@ body {
   letter-spacing: 0.02em;
   color: #2e2f42;
 }
-.navigator:is(:hover, :focus) {
+.navigation:is(:hover, :focus) {
   color: var(--second-link-color);
 }
 
