--- a/css/styles.css
+++ b/css/styles.css
@@ -51,7 +51,7 @@ body {
   color: var(--second-link-color);
 }
 
-.header-contact-mail {
+.header-contact-adress {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
