--- a/css/styles.css
+++ b/css/styles.css
@@ -58,7 +58,7 @@ body {
   letter-spacing: 0.02em;
   color: #434455;
 }
-.header-contact-mail:is(:hover, :focus) {
+.header-contact-adress:is(:hover, :focus) {
   color: var(--second-link-color);
 }
 
