--- a/css/styles.css
+++ b/css/styles.css
@@ -51,25 +51,25 @@ body {
   color: var(--second-link-color);
 }
 
-.header-contact-adress {
+.header-contact {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
 }
-.header-contact-adress:is(:hover, :focus) {
+.header-contact:is(:hover, :focus) {
   color: var(--second-link-color);
 }
 
-.header-contact-phone {
+.header-contact {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5px;
   letter-spacing: 0.02em;
   color: #434455;
 }
-.header-contact-phone:is(:hover, :focus) {
+.header-contact:is(:hover, :focus) {
   color: var(--second-link-color);
 }
 .adress {
