--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,7 @@
   --second-color-buttom: #ffffff;
   --body-background-color: #ffffff;
   --logo-color: #4d5ae5;
+  --background-main: #2e2f42;
 }
 
 body {
@@ -63,6 +64,19 @@ body {
 }
 .adress {
   font-style: normal;
+}
+
+/**---------------------HERO--------------------**/
+
+.hero-main-index {
+  background-color: var(--background-main);
+}
+.hero-h {
+  font-size: 56px;
+  line-height: 1.07;
+  text-align: center;
+  letter-spacing: 0.02em;
+  color: #ffffff;
 }
 
 /**--------------------HERO BTN------------------**/
