--- a/css/styles.css
+++ b/css/styles.css
@@ -77,7 +77,22 @@ body {
   text-align: center;
   letter-spacing: 0.02em;
   color: #ffffff;
+  
 }
+.hero-btn {
+  font-family: 'Roboto', sans-serif;
+  background: #4D5AE5;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #ffffff;
+  cursor: pointer;
+}
+.hero-btn:is(:hover, :focus) {
+  background-color: #404bbf;
+  color: var(--second-color-buttom);}
+
 
 /**--------------------HERO BTN------------------**/
 
