--- a/css/styles.css
+++ b/css/styles.css
@@ -77,11 +77,10 @@ body {
   text-align: center;
   letter-spacing: 0.02em;
   color: #ffffff;
-  
 }
 .hero-btn {
-  font-family: 'Roboto', sans-serif;
-  background: #4D5AE5;
+  font-family: "Roboto", sans-serif;
+  background: #4d5ae5;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -91,8 +90,19 @@ body {
 }
 .hero-btn:is(:hover, :focus) {
   background-color: #404bbf;
-  color: var(--second-color-buttom);}
+  color: var(--second-color-buttom);
+}
 
+.hero-second-text: {
+  list-style: none;
+}
+.first-heading: {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: var(--bacground-main);
+}
 
 /**--------------------HERO BTN------------------**/
 
