--- a/css/styles.css
+++ b/css/styles.css
@@ -103,6 +103,12 @@ body {
   letter-spacing: 0.02em;
   color: var(--bacground-main);
 }
+.hero-p{
+  font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+
+}
 
 /**--------------------HERO BTN------------------**/
 
