--- a/css/styles.css
+++ b/css/styles.css
@@ -93,9 +93,9 @@ body {
   color: var(--second-color-buttom);
 }
 
-.hero-second-text: {
+/* .hero-second-text: {
   list-style: none;
-}
+} */
 .first-heading: {
   font-weight: 500;
   font-size: 20px;
@@ -103,11 +103,10 @@ body {
   letter-spacing: 0.02em;
   color: var(--bacground-main);
 }
-.hero-p{
+.hero-p {
   font-size: 16px;
-line-height: 1.5;
-letter-spacing: 0.02em;
-
+  line-height: 1.5;
+  letter-spacing: 0.02em;
 }
 
 /**--------------------HERO BTN------------------**/
