--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@
   --body-background-color: #ffffff;
   --logo-color: #4d5ae5;
   --background-main: #2e2f42;
+  --color-text: #2e2f42;
 }
 
 body {
@@ -96,13 +97,14 @@ body {
 /* .hero-second-text: {
   list-style: none;
 } */
-.first-heading: {
+.first-heading {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
-  color: var(--bacground-main);
+  color:var(--color-text);
 }
+
 .hero-p {
   font-size: 16px;
   line-height: 1.5;
