--- a/css/styles.css
+++ b/css/styles.css
@@ -110,6 +110,14 @@ body {
   line-height: 1.5;
   letter-spacing: 0.02em;
 }
+.hero-heading-third {
+font-size: 36px;
+line-height: 1.11;
+text-align: center;
+letter-spacing: 0.02em;
+text-transform: capitalize;
+color:var(--color-text);
+}
 
 /**--------------------HERO BTN------------------**/
 
