--- a/css/styles.css
+++ b/css/styles.css
@@ -118,6 +118,14 @@ letter-spacing: 0.02em;
 text-transform: capitalize;
 color:var(--color-text);
 }
+.hero-heading-fourth {
+  font-size: 36px;
+line-height: 1.11;
+text-align: center;
+letter-spacing: 0.02em;
+text-transform: capitalize;
+color:var(--color-text);
+}
 
 /**--------------------HERO BTN------------------**/
 
