--- a/css/styles.css
+++ b/css/styles.css
@@ -166,7 +166,7 @@ body {
 
 /**--------------------FOOTER------------------**/
 
-.footer {
+.foot {
   width: 1440px;
   height: 312px;
   left: 0px;
