--- a/css/styles.css
+++ b/css/styles.css
@@ -137,14 +137,16 @@ body {
 
 .hero-button {
   font-family: "Roboto", sans-serif;
-  background: #f4f4fd;
-  border: 1px solid #e7e9fc;
-  border-radius: 4px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
   cursor: pointer;
   color: var(--second-link-color);
+  background: var(--second-footer-color);
 }
 .hero-button:is(:hover, :focus) {
-  background-color: #404bbf;
+  background-color:var(--second-link-color);
   color: var(--second-color-buttom);
 }
 /**--------------------HERO img------------------**/
