--- a/css/styles.css
+++ b/css/styles.css
@@ -142,7 +142,7 @@ body {
   line-height: 1.5;
   letter-spacing: 0.04em;
   cursor: pointer;
-  color: var(--second-link-color);
+  color: var(--logo-color);
   background: var(--second-footer-color);
 }
 .hero-button:is(:hover, :focus) {
