--- a/css/styles.css
+++ b/css/styles.css
@@ -149,6 +149,7 @@ body {
 /**--------------------HERO img------------------**/
 
 .hero-main-h {
+  font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
