--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
+
+*{ box-sizing: border-box; }
+
+
 :root {
   --second-footer-color: #f4f4fd;
   --second-link-color: #404bbf;
@@ -77,7 +81,8 @@ body {
   line-height: 1.07;
   text-align: center;
   letter-spacing: 0.02em;
-  color: #ffffff;
+  color:var(--body-background-color);
+  background-color: var(--color-text);
 }
 .hero-btn {
   font-family: "Roboto", sans-serif;
